@@ -1373,7 +1373,7 @@ static int AY8910_init(const char *chip_name,int chip,
 	for (i = 0;i < 3;i++)
 		PSG->mix_vol[i] = MIXER_GET_LEVEL(volume);
 	sprintf(buf,"%s #%d",chip_name,chip);
-	PSG->Channel = stream_init(buf,MIXERG(100,gain,pan),sample_rate,chip,AY8910Update);
+	PSG->Channel = stream_init(buf,MIXERG(volume,gain,pan),sample_rate,chip,AY8910Update);
 #else
 	for (i = 0;i < 3;i++)
 	{
