@@ -141,6 +141,7 @@ struct sndbrdIntf {
 #define SNDBRD_NUOVA   SNDBRD_TYPE(46,0)
 #define SNDBRD_GRAND   SNDBRD_TYPE(47,0)
 #define SNDBRD_JVH     SNDBRD_TYPE(48,0)
+#define SNDBRD_JVH2    SNDBRD_TYPE(48,1)
 #define SNDBRD_TABART  SNDBRD_TYPE(49,0)
 #define SNDBRD_JEUTEL  SNDBRD_TYPE(50,0)
 #define SNDBRD_PLAY1   SNDBRD_TYPE(51,0)
